[project]
name = "videocaptioner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diskcache>=5.6.3",
    "gputil>=1.4.0",
    "json-repair>=0.54.2",
    "langdetect>=1.0.9",
    "modelscope>=1.32.0",
    "openai>=2.8.1",
    "psutil>=7.1.3",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "yt-dlp>=2025.11.12",
    "pyqt5==5.15.11",
    "pyqt-fluent-widgets==1.8.4",
]

[tool.uv]
override-dependencies = ["pyqt5-qt5==5.15.2"]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
